--- a/app/src/main/res/layout/activity_do_post.xml
+++ b/app/src/main/res/layout/activity_do_post.xml
@@ -14,36 +14,16 @@
         android:layout_height="match_parent"
         android:layout_margin="13dp">
 
-        <!-- title post -->
-
-        <!--<TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Título"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16dp"
-            android:layout_marginBottom="0dp"/>-->
 
         <EditText android:id="@+id/input_title_post"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:hint="Título"
-            android:layout_below="@+id/textView"
+            android:hint="Título de la publicación"
+            android:textCursorDrawable="@drawable/cursor_text"
             android:textSize="16dp"
-            android:textColorHint="#c2c2c2"/>
-
-        <!-- description post -->
-
-        <!--<TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Descripción"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16dp"
-            android:layout_marginBottom="0dp"
-            android:layout_marginTop="10dp"
-            />-->
+            android:textColorHint="#c2c2c2"
+            android:theme="@style/EditTextTheme" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -61,19 +41,11 @@
                 android:inputType="textMultiLine"
                 android:background="@drawable/field_write_question"
                 android:textCursorDrawable="@drawable/cursor_text"
-                android:hint="Agrega aquí una descripción.."
+                android:hint="Agrega aquí el contenido de la publicación..."
                 android:textSize="16dp"
                 android:textColorHint="#c2c2c2"
                 android:layout_marginTop="10dp"
                 android:editable="true" />
-            <!--<EditText android:id="@+id/input_descripction_post"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textView"
-                android:textSize="16dp"
-                android:hint="Agrega una descripción"
-                android:inputType="textMultiLine"
-                android:textColorHint="#c2c2c2"/>-->
         </RelativeLayout>
 
         <!-- Tags -->
@@ -94,20 +66,10 @@
                 android:layout_marginTop="30dp">
                 <include
                     android:id="@+id/add_tags"
-                    layout="@layout/activity_preferences_old">
+                    layout="@layout/activity_preferences">
                 </include>
             </ScrollView>
         </RelativeLayout>
-        <!--<ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/scrollView"
-            android:layout_marginTop="10dp">
-            <include
-                android:id="@+id/add_tags"
-                layout="@layout/activity_preferences_old">
-            </include>
-        </ScrollView>-->
 
         <Button
             android:id="@+id/btn_doPost"
